# opentele

./: .gitignore  flake.nix  pyproject.toml
opentele/td/: account.py
tests/: tdata_test.py
